# geophysics_postfire_book-jb2

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  agenda.md  environment.yml  glossary.md  intro.md  intro_microcredential_UCLM.md  myst.yml  myst_backup.yml  pyproject.toml  references.bib  requirements.txt
_build/cache/: doi-3a4a2d23764a24cebc29922fb918adbe.csl.json
_build/logs/: myst.build.json
_build/site/: config.json  myst.search.json  myst.xref.json  objects.inv
_build/site/content/: agenda.json  agramon.json  electromagnetics-introduction.json  emagpy-introduction.json  er-concept.json  geophysics-basics-1.json  (+17 more)
assets/: Agramon_utils.py
assets/complementary_data/: DEM_Agramon_cropped.tif
docs/: 01_python_basics.md  agenda.md  getting_started.md
exercises/: Exercice1_ResistivityBasics.md  Exercice2_ERTSurveyDesign.md  Exercice3_FieldDataAnalysis.md  Exercice4_FieldDataInterpretation.md  Exercice5_PostFire_bib.md  README.md
exercises/data/: test.ipynb
notebooks/: Makefile  pedophysics.md
notebooks/01_introduction/: 013_postfire_soil_basics.ipynb  013_postfire_soil_basics.md  013_postfire_soil_basics_geophysics.ipynb  013_postfire_soil_basics_geophysics.md  01_python_basics.ipynb  01_python_basics.md  02_geophysical_methods.md
notebooks/02_resistivity/: 012_ER_concept.ipynb  012_ER_concept.md  01_resipy_introduction.ipynb  01_resipy_introduction.md  01_resistivity_introduction.ipynb  01_resistivity_introduction.md
notebooks/03_electromagnetics/: 01_electromagnetics_introduction.ipynb  01_electromagnetics_introduction.md  01_emagpy_introduction.ipynb  01_emagpy_introduction.md
notebooks/practical_cases/: Agramon.md  Agramon_EM.md  Agramon_ERT.md  Hellin.ipynb  Hellin.md  Hellin_EM.md  Hellin_diques.ipynb  Hellin_diques.md  Hellin_diques.py  introduction_GRWATER.ipynb  introduction_GRWATER.md  river_bank_ERT_interactive.ipynb
(+304 files in other folders)
