[tool.poetry]
name = "geophysics-python-course"
version = "1.0.0"
description = "Python course for geophysical data analysis with resipy and emagpy"
authors = ["Your Name <your-email@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/geophysics-python-course"
repository = "https://github.com/yourusername/geophysics-python-course"
keywords = ["geophysics", "resistivity", "electromagnetic", "education"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.0"
scipy = "^1.7.0"
matplotlib = "^3.5.0"
pandas = "^1.3.0"
resipy = "^3.4.0"
emagpy = "^1.1.0"
jupyter = "^1.0.0"
jupyterlab = "^4.0.0"
ipykernel = "^6.0.0"
ipywidgets = "^8.0.0"
seaborn = "^0.12.0"
pyvista = "^0.43.0"
scikit-learn = "^1.0.0"
tqdm = "^4.62.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
isort = "^5.12.0"
pre-commit = "^3.0.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.0"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"] 
